# liza-djinni-scraper

./: .env.example  .gitignore  CHANGELOG.md  Procfile  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-17-djinni-scraper-api.md  2026-06-23-job-hunter-v2-phase1.md
docs/superpowers/specs/: 2026-06-17-djinni-scraper-api-design.md  2026-06-23-job-hunter-v2-design.md
liza/: config.py  models.py  scheduler.py
liza/api/: main.py
liza/jobhunter/: contracts.py  pipeline.py  repo.py  source.py
liza/llm/: client.py
liza/matching/: prefilter.py  scorer.py
liza/profiles/: repo.py
liza/scraper/: client.py  djinni.py  parser.py
liza/storage/: repo.py
static/: index.html
tests/: test_api.py  test_candidacy_repo.py  test_client.py  test_config.py  test_contracts.py  test_djinni.py  test_jobhunter_api.py  test_jobhunter_models.py  test_live.py  test_llm_client.py  test_match_pipeline.py  test_models.py  test_parser.py  test_prefilter.py  test_profiles_repo.py  test_repo.py  test_scheduler.py  test_scorer.py
tests/fixtures/: djinni_jobs.html
